--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,7 @@ h1 {
 }
 
 .next {
+  cursor: pointer;
   text-decoration: inherit;
   height: 40px;
   width: 150px;
@@ -134,6 +135,22 @@ h1 {
   align-items: center;
   color: white;
   font-size: 20px;
+  outline: 0;
+}
+
+.nextDisabled {
+  cursor: pointer;
+  text-decoration: inherit;
+  height: 40px;
+  width: 150px;
+  background-color: grey;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 20px;
+  outline: 0;
 }
 
 .input-element {
