--- a/src/App.css
+++ b/src/App.css
@@ -186,6 +186,20 @@ h1 {
   outline: 0;
 }
 
+.input-on {
+  height: 40px;
+  width: 320px;
+  box-sizing: border-box;
+  font-weight: 700;
+  font-size: 24px;
+  border-radius: 4px;
+  transition: 1s;
+  box-shadow: 0 3px 0 #ff9e23;
+  border: 1px solid #ff9e23;
+  padding: 8px 15px;
+  outline: 0;
+}
+
 .description {
   flex: 2;
   margin-left: 20px;
